# whisper-asr-webservice

./: .env  Dockerfile  Dockerfile copy  Dockerfile copy.gpu  Dockerfile.gpu  pyproject.toml  requirements.txt
app/: alert.py  api.py  emit.py  main.py  rabbit.py  rabbitfull.py  transcribe.py
